--- a/content/lectures/07-mcmcalgos.Rmd
+++ b/content/lectures/07-mcmcalgos.Rmd
@@ -24,11 +24,8 @@ output:
 ### Chaînes de Markov partie 2
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PVyD1CBs2KU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC)
-<iframe width="560" height="315" src="https://www.youtube.com/embed/O-pYazQrbH4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-### Algorithm de Metropolis-Hastings & Echantilloneur de Gibbs
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZTxrt08oec0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+### Algorithmes de Monte-Carlo à Chaîne de Markov (MCMC), algorithme de Metropolis-Hastings & échantilloneur de Gibbs
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4vyumvSy_x0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Diaporamas
 
