--- a/content/TD/06-exercice6.Rmd
+++ b/content/TD/06-exercice6.Rmd
@@ -32,7 +32,7 @@ Dans cet exercice, nous nous proposons de voir comment il est possible de simule
  1. Proposer un algorithme basé sur la méthode par inversion, permettant de simuler la réalisation d'un échantillon de taille n d'une loi de Pareto de paramètres $\lambda=2$ et $k=5$. La densité de la loi de Pareto est la suivante : $f(x)=k \frac{\lambda^k}{ x^{k+1}}$).
 
  
- 2. Grâce à ce premier algorithme nous pouvons donc maintenant simuler un $n$-échantillon $iid$ $\boldsymbol{x}=x^(1), ...x^(n)$ suivant une loi de Pareto de paramètres $\lambda=2$ et $k=5$. Désormais, nous voulons vérifier que l'algorithme est valide et nous voulons ré-estimer le paramètre $k$ ayant servi à simuler ces données. On suppose $\lambda=2$ connu et fixé. Pour cela, nous allons appliquer des méthodes bayésiennes avec l'*a priori* suivant pour $k$ : $\pi(k)=\frac{1}{200}e^{-\frac{k^2}{2*100^2}}\mathds{1}_{k\in]0,\infty[}$. Écrire le modèle bayésien associé puis calculer la loi *a posteriori* de $k |\boldsymbol{x}$.
+ 2. Grâce à ce premier algorithme nous pouvons donc maintenant simuler un $n$-échantillon $iid$ $\boldsymbol{x}=x^(1), ...x^(n)$ suivant une loi de Pareto de paramètres $\lambda=2$ et $k=5$. Désormais, nous voulons vérifier que l'algorithme est valide et nous voulons ré-estimer le paramètre $k$ ayant servi à simuler ces données. On suppose $\lambda=2$ connu et fixé. Pour cela, nous allons appliquer des méthodes bayésiennes avec l'*a priori* suivant pour $k$ : $\pi(k)=\frac{1}{200}e^{-\frac{k^2}{2*100^2}}\mathbb{1}_{k\in]0,\infty[}$. Écrire le modèle bayésien associé puis calculer la loi *a posteriori* de $k |\boldsymbol{x}$.
  
  3. Expliquer brièvement la logique de l'acceptation/rejet en fonction de la loi instrumentale de proposition et de la loi que l'on veut échantillonner. Quelle simplification apparait en prenant pour loi instrumentale la loi *a priori* du paramètre? Comment appelle-t-on ce phénomène ?
 
